# uhaifa_deeplearning

./: CLAUDE.md
nn_backward_connections/: .gitignore  CLAUDE.md  README.md  RESEARCH_BRIEF.md  create_notebook.py  environment.yml  pyproject.toml  requirements.txt  rocket_mfas_reproduction.ipynb
nn_backward_connections/.claude/: settings.json
nn_backward_connections/.ipynb_checkpoints/: rocket_mfas_reproduction-checkpoint.ipynb
nn_backward_connections/configs/: baseline_rocket.yaml
nn_backward_connections/data/: README.md  table_mouse.txt
nn_backward_connections/eval/: __init__.py  aggregate.py  harness.py  run_variant.py
nn_backward_connections/experiments/: PROTOCOL.md  backlog.md  create_notebook.py  findings.md  log.md  rocket_base.ipynb
nn_backward_connections/results/: 20260621T001607Z-baseline_rocket-connectome-s42-5ec3ce.json  20260621T001733Z-baseline_rocket-connectome-s123-5ec3ce.json  20260621T001858Z-baseline_rocket-connectome-s999-5ec3ce.json  20260621T002023Z-baseline_rocket-mouse-s42-5cf05a.json  20260621T002026Z-baseline_rocket-mouse-s123-5cf05a.json  20260621T002029Z-baseline_rocket-mouse-s999-5cf05a.json  20260621T005223Z-baseline_passthrough-connectome-s42-implement-f8cb3c.json  20260621T005348Z-baseline_passthrough-connectome-s123-implement-f8cb3c.json  20260621T005513Z-baseline_passthrough-connectome-s999-implement-f8cb3c.json  20260621T012723Z-baseline_passthrough-mouse-s42-implement-7b7cba.json  20260621T014224Z-baseline_passthrough-mouse-s123-implement-7b7cba.json  20260621T014227Z-baseline_passthrough-mouse-s999-implement-7b7cba.json  (+13 more)
(+32 files in other folders)
